<resources>
    <string name="app_name">BluetoothHelper</string>
    <string name="bluetooth_on_off">Вкл./Выкл. Bluetooth</string>
    <string name="bluetooth_off">Bluetooth выключен</string>
    <string name="start_search">Начать поиск</string>
    <string name="bluetooth_not_supported">Bluetooth не поддерживается</string>
    <string name="stop_search">Остановить поиск</string>
    <string name="disconnect">Отключиться</string>
    <string name="led_red">Запись</string>
    <string name="connecting">Соединение...</string>
    <string name="please_wait">Подождите, пожалуйста...</string>
    <string name="green_led">Зеленый светодиод</string>
    <string name="btn_send">Send message</string>
    <string name="create_graph">create Graph</string>
    <string name="succ_send">Mess succ send</string>


</resources>
